--- a/app/(main)/items/ui/components/purchasemodal/modal.css
+++ b/app/(main)/items/ui/components/purchasemodal/modal.css
@@ -1,14 +1,20 @@
 .modal-overlay {
     position: fixed;
-    top: 0;
+    top: 149px;
     left: 0;
     right: 0;
-    bottom: 0;
+    bottom: 16px;
+    padding: 16px;
     display: flex;
     justify-content: center;
     align-items: center;
     z-index: 100;
 }
+
+.item-form-modal {
+  align-items: start;
+}
+  
 
 .modal-overlay::before {
     content: "";
@@ -28,15 +34,27 @@
     opacity: 0.9;
 }
 
+.modal-container {
+  position: relative;
+  display: flex;
+  width: 100%;
+  max-width: 400px;
+}
+
+.item-form-modal .modal-container {
+  max-width: 800px;
+}
+
 .modal {
     background-color: var(--background-color);
     padding: 20px;
     border-radius: 8px;
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
-    z-index: 101;
-    max-width: 90%;
-    width: 400px;
-    max-height: 90vh;
+    z-index: 99;
+    width: 100%;
+    max-height: calc(100vh - 197px);
+    overflow-x: hidden;
+    overflow-y: auto;
     position: relative;
 }
 
@@ -145,3 +163,14 @@
     border-color: var(--primary-color);
     box-shadow: 0 0 0 2px rgba(var(--primary-color-rgb), 0.2);
 }
+
+@media (min-width: 600px) {
+  .modal-overlay {
+    top: 84px;
+  }
+
+  .modal {
+    max-height: calc(100vh - 140px);
+  }
+}
+  
