--- a/app/(main)/lists/ui/styles/list.css
+++ b/app/(main)/lists/ui/styles/list.css
@@ -67,7 +67,7 @@
   font-size: 24px;
   font-weight: 100;
   font-family: var(--font-crimson-pro);
-  word-break: break-all;
+  word-break: break-word;
 }
 
 @media (min-width: 550px) {
